# python-project-template

./: .pre-commit-config.yaml  LICENSE  README.md  copier.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/assets/: .copier-answers-poetry.yml  .copier-answers-uv.yml  .copier-answers.yml
.github/workflows/: build.yaml  release-drafter.yaml
project/: .editorconfig.jinja  .gitattributes.jinja  .gitignore  AGENTS.md.jinja  README.md.jinja  SECURITY.md.jinja  pyproject.toml.jinja  {% if copyright_license != 'none' %}LICENSE{% endif %}.jinja  {% if include_docs %}mkdocs.yml{% endif %}.jinja  {% if use_precommit %}.pre-commit-config.yaml{% endif %}.jinja
project/.devcontainer/: Dockerfile.jinja  devcontainer.json.jinja
project/.github/: CODEOWNERS.jinja  CONTRIBUTING.md.jinja  PULL_REQUEST_TEMPLATE.md.jinja  dependabot.yml  dependabot.yml.jinja  release-drafter.yaml
project/.github/ISSUE_TEMPLATE/: 1_bug_report.yaml.jinja  2_feature_request.yaml.jinja  3_refactor.yaml.jinja  4_documentation.yaml.jinja  config.yml.jinja
project/.github/workflows/: build.yaml.jinja  copier.yaml.jinja  pre-commit.yaml.jinja  release-drafter.yaml.jinja  release.yaml.jinja  (+4 more)
project/scripts/: llm.sh
project/{% if include_docs %}docs{% endif %}/: mkdocs.yml.jinja
project/{% if include_docs and docs_library == "mkdocs" %}docs{% endif %}/: mkdocs.yml.jinja
project/{% if include_docs and docs_library == "sphinx" %}docs{% endif %}/: _index.rst.jinja  conf.py.jinja  index.md.jinja  references.bib
(+13 files in other folders)
