[tool.poetry]
name = "python-project-template"
version = "0.1.0"
description = "A generic python repository template"
authors = ["twsl <45483159+twsl@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
copier-templates-extensions = "^0.3.0"
copier = "^9.1.1"
pyyaml-include = "<2" # https://github.com/copier-org/copier/issues/1568


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
