[tool.poetry]
name = "python-project-template"
version = "0.1.0"
description = "A generic python repository template"
authors = ["twsl <45483159+twsl@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
copier = "^9.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
